move all pictures to img folder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2 class="name">Негодова Тетяна</h2>
         <span class="personal">Особисті дані</span>
         <div class="image">
-          <img src="woman.png" alt="" class="image__img">
+          <img src="img/woman.png" alt="" class="image__img">
         </div>
         <p class="date">
           <span class="date-title">Дата народження<br /></span>
@@ -28,15 +28,15 @@
         </p>
         <span class="contacts">Контакти</span>
         <a href="tel:+380502021741" class="contacts__link tel">
-          <img src="tel.svg" alt="" class="tel__icon contacts__icon">
+          <img src="img/tel.svg" alt="" class="tel__icon contacts__icon">
           +380502021741
         </a>
         <a href="https://github.com/IT-Tanka" class="contacts__link git">
-          <img src="github.svg" alt="" class="git__icon contacts__icon">
+          <img src="img/github.svg" alt="" class="git__icon contacts__icon">
           https://github.com/IT-Tanka
         </a>
         <a href="mailto:tanegodova@gmail.com" class="contacts__link mail">
-          <img src="mail.svg" alt="" class="mail__icon contacts__icon">
+          <img src="img/mail.svg" alt="" class="mail__icon contacts__icon">
           tanegodova@gmail.com
         </a>
         <span class="aducation_tt">Освіта</span>
