--- a/enindex.html
+++ b/enindex.html
@@ -19,23 +19,23 @@
       <h2 class="name">Negodova Tetyana</h2>
       <span class="personal">Personal data</span>
       <div class="image">
-        <img src="woman.png" alt="" class="image__img">
+        <img src="img/woman.png" alt="" class="image__img">
       </div>
       <p class="date">
         <span class="date-title">Date of birth:<br /></span>
-        <span>4.12.1979</span>
+        <span>12/4/1979</span>
       </p>
       <span class="contacts">Contacts</span>
       <a href="tel:+380502021741" class="contacts__link tel">
-        <img src="tel.svg" alt="" class="tel__icon contacts__icon">
+        <img src="img/tel.svg" alt="" class="tel__icon contacts__icon">
         +380502021741
       </a>
       <a href="https://github.com/IT-Tanka" class="contacts__link git">
-        <img src="github.svg" alt="" class="git__icon contacts__icon">
+        <img src="img/github.svg" alt="" class="git__icon contacts__icon">
         https://github.com/IT-Tanka
       </a>
       <a href="mailto:tanegodova@gmail.com" class="contacts__link mail">
-        <img src="mail.svg" alt="" class="mail__icon contacts__icon">
+        <img src="img/mail.svg" alt="" class="mail__icon contacts__icon">
         tanegodova@gmail.com
       </a>
       <span class="aducation_tt">Education</span>
